--- a/assets/css/icons.scss
+++ b/assets/css/icons.scss
@@ -49,3 +49,8 @@
   --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 24 24' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill='currentColor' d='M6 6v2h8.59L5 17.59L6.41 19L16 9.41V18h2V6z'/%3E%3C/svg%3E");
   @include icon-properties(--un-icon);
 }
+
+.i-streamline-interface-setting-menu-2-button-parallel-horizontal-lines-menu-navigation-staggered-three-hamburger {
+  --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 14 14' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' d='M13.5 2H6m5 5H3.5m5 5h-8'/%3E%3C/svg%3E");
+  @include icon-properties(--un-icon);
+}
