--- a/assets/css/icons.scss
+++ b/assets/css/icons.scss
@@ -50,6 +50,11 @@
   @include icon-properties(--un-icon);
 }
 
+.i-ic-sharp-close {
+  --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 24 24' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill='currentColor' d='M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41z'/%3E%3C/svg%3E");
+  @include icon-properties(--un-icon);
+}
+
 .i-streamline-interface-setting-menu-2-button-parallel-horizontal-lines-menu-navigation-staggered-three-hamburger {
   --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 14 14' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' d='M13.5 2H6m5 5H3.5m5 5h-8'/%3E%3C/svg%3E");
   @include icon-properties(--un-icon);
