--- a/assets/css/icons.scss
+++ b/assets/css/icons.scss
@@ -59,3 +59,13 @@
   --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 14 14' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' d='M13.5 2H6m5 5H3.5m5 5h-8'/%3E%3C/svg%3E");
   @include icon-properties(--un-icon);
 }
+
+.i-line-md-coffee-half-empty-twotone-loop {
+  --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 24 24' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill='currentColor' fill-opacity='0' d='M17 14V17a3 3 0 0 1-3 3H8a3 3 0 0 1-3-3V14z'%3E%3Canimate fill='freeze' attributeName='fill-opacity' begin='0.8s' dur='0.15s' values='0;0.3'/%3E%3C/path%3E%3Cg fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath stroke-dasharray='48' stroke-dashoffset='48' d='M17 9v9a3 3 0 0 1-3 3H8a3 3 0 0 1-3-3V9z'%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' dur='0.6s' values='48;0'/%3E%3C/path%3E%3Cpath stroke-dasharray='14' stroke-dashoffset='14' d='M17 14H20C20.55 14 21 13.55 21 13V10C21 9.45 20.55 9 20 9H17'%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' begin='0.6s' dur='0.2s' values='14;28'/%3E%3C/path%3E%3C/g%3E%3Cmask id='lineMdCoffeeHalfEmptyTwotoneLoop0'%3E%3Cpath fill='none' stroke='%23fff' stroke-width='2' d='M8 0c0 2-2 2-2 4s2 2 2 4-2 2-2 4 2 2 2 4M12 0c0 2-2 2-2 4s2 2 2 4-2 2-2 4 2 2 2 4M16 0c0 2-2 2-2 4s2 2 2 4-2 2-2 4 2 2 2 4'%3E%3CanimateMotion calcMode='linear' dur='3s' path='M0 0v-8' repeatCount='indefinite'/%3E%3C/path%3E%3C/mask%3E%3Crect width='24' height='0' y='7' fill='currentColor' mask='url(%23lineMdCoffeeHalfEmptyTwotoneLoop0)'%3E%3Canimate fill='freeze' attributeName='y' begin='0.8s' dur='0.6s' values='7;2'/%3E%3Canimate fill='freeze' attributeName='height' begin='0.8s' dur='0.6s' values='0;5'/%3E%3C/rect%3E%3C/svg%3E");
+  @include icon-properties(--un-icon);
+}
+
+.i-tabler-chevron-up {
+  --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 24 24' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m6 15l6-6l6 6'/%3E%3C/svg%3E");
+  @include icon-properties(--un-icon);
+}
